api urllari tekshrib ko'rildi
